# django-bi-temporal

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/django_bi_temporal/: models.py  queryset.py
tests/: settings.py  test_bitemporal.py
tests/example_app/: models.py
tests/example_app/migrations/: 0001_initial.py
