[metadata]
name = django-bi-temporal
version = 0.0.1
author = Jakub Szafrański
author_email = s@samu.pl
url = https://github.com/samupl/django-bi-temporal
description = Bi-temporal models for django
long_description = file: README.md
long_description_content_type = text/markdown
keywords = temporal, bi-temporal, django, database
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8
install_rqeuires =
    django >= 2.2

[options.packages.find]
where = src
